[gd_scene load_steps=3 format=3 uid="uid://dryry7dqxg8xg"]

[ext_resource type="Script" path="res://main.gd" id="1_k8f7q"]

[sub_resource type="FontFile" id="FontFile_kf7j3"]
cache/0/130/0/ascent = 0.0
cache/0/130/0/descent = 0.0
cache/0/130/0/underline_position = 0.0
cache/0/130/0/underline_thickness = 0.0
cache/0/130/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8f7q")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -577.0
offset_top = 4.0
offset_right = 580.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.243137, 0.611765, 0.207843, 1)
theme_override_fonts/font = SubResource("FontFile_kf7j3")
theme_override_font_sizes/font_size = 130
text = "DIME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProfileButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -429.0
offset_top = -200.0
offset_right = -368.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 0
text = "Profile"

[node name="BudgetButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -234.0
offset_top = -370.0
offset_right = -34.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
text = "Budget"

[node name="ProgressButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -363.0
offset_right = 232.0
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 0
text = "Progress"

[node name="SettingsButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 301.0
offset_top = -362.0
offset_right = 501.0
offset_bottom = -162.0
grow_horizontal = 2
grow_vertical = 0
text = "Settings"

[connection signal="pressed" from="ProfileButton" to="." method="_on_profile_button_pressed"]
[connection signal="pressed" from="ProfileButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BudgetButton" to="." method="_on_budget_button_pressed"]
[connection signal="pressed" from="BudgetButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ProgressButton" to="." method="_on_progress_button_pressed"]
[connection signal="pressed" from="ProgressButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_button_pressed"]
